Added some changes

--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
         </div>
 
     </div>
-</body>
+    <br>
+    <br>
+    <i class='bx bxs-rocket image' ></i>
+    <H1 class="center text">Fast.Css </H1>
+    <p class="center biography">We're a Open Source Framework for css that makes coding easy!</p>
+    
+   </body>
 </html>
