--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <i><a class="link"href="index.html"><i id="home"class='bx bxs-home'></i>Home</a></i>
+                    <i><a class="link"href="index.html"><i id="home"class='bx bxs-home'></i>home</a></i>
                     <i><a class="link2"href="contact.html"><i id="home"class='bx bxl-github'></i id="home">Github</a></i>
                 </ul>
             </div>
